add create user fix interceptor add create user logic into database and add swagger json into code
